# python-project-lvl2

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: linter-check.yml  main.yml  pyci.yml  tests.yml
gendiff/: __init__.py  file_parser.py  generate_diff.py  logic.py  parser.py
gendiff/formatter/: stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
gendiff/tests/: test_gendiff.py  test_generate_diff.py
gendiff/tests/fixtures/: true_json.py  true_yaml.py
gendiff/tests/fixtures/nested/: nested_file1.yml  nested_file2.yml  true_nested_json.py
